# RAXINIA

./: .gitignore  Dockerfile  README.md
.initia/: submission.json
backend/: .env.example  API_README.md  Cargo.toml  Dockerfile
backend/src/: api.rs  lib.rs  main.rs
contracts/: INTEGRATION_GUIDE.md  VAULT_README.md  foundry.toml  integration-example.ts
contracts/broadcast/DeployInitia.s.sol/2124225178762456/: run-latest.json
contracts/script/: DeployInitia.s.sol  MintUSDC.s.sol  TransferUSDC.s.sol
contracts/src/: RaxcCreditVault.sol
contracts/test/: Counter.t.sol  RaxcCreditVault.t.sol
frontend/: .env.example  README.md  TOKEN_COUNTING.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AnalyzeSection.tsx  DepositModal.tsx  PaymentModal.tsx  ResultSection.tsx
frontend/lib/: tokenizer.ts  useVaultBalance.tsx  wallet.tsx
