[package]
name = "raxc"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "analyze"
path = "src/main.rs"

[[bin]]
name = "api"
path = "src/api.rs"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
reqwest        = { version = "0.11", features = ["json"] }
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
dotenv         = "0.15"
regex          = "1"
chrono         = { version = "0.4",  features = ["clock"] }
anyhow         = "1"
qdrant-client  = "1"
axum           = "0.7"
tower-http     = { version = "0.5", features = ["cors"] }
ethers         = { version = "2.0", features = ["abigen", "ws"] }
hex            = "0.4"

